<resources>
    <string name="app_name">ContactMVVMandRoom</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_phone_number">Enter Your PHONE Number</string>
    <string name="save">save</string>
    <string name="enter_your_second_name">Enter your Second Name</string>
    <string name="required">required</string>
    <string name="inserted">inserted</string>
    <string name="update">UPDATE</string>
    <string name="do_you_want_to_update_contact">Do You want to update Contact ?</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="updated">Updated</string>
    <string name="contact_app">Contact App</string>
</resources>