<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".ui.showContact.ShowContact">


    <TextView
        android:id="@+id/text_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:autofillHints="name"
        android:background="@color/silver2"
        android:hint="@string/full_name"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.95" />


    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints="phone"
        android:background="@color/silver2"
        android:hint="@string/phone_number"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_full_name"
        app:layout_constraintWidth_percent="0.95" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingStart="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phone_number">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@color/navy"
            android:paddingVertical="@dimen/_7sdp"
            android:paddingStart="@dimen/_3sdp"
            android:text="@string/do_you_want_to_update_contact"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/navy"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text"
            app:layout_constraintStart_toEndOf="@id/text"
            app:layout_constraintTop_toTopOf="@id/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_call_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parent2"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="@dimen/_100sdp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_message_24"
        app:layout_constraintStart_toEndOf="@id/btn_call"
        app:layout_constraintTop_toTopOf="@id/btn_call"
        app:layout_constraintBottom_toBottomOf="@id/btn_call"
        android:layout_marginStart="@dimen/_25sdp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@string/app_name"
        />


</androidx.constraintlayout.widget.ConstraintLayout>