<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.updateUser.UpdateUser">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_510sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:backgroundTint="@color/navy"
        android:elevation="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_450sdp"
            android:layout_gravity="center"
            android:background="@color/silver">

            <EditText
                android:id="@+id/edit_add_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@color/silver2"
                android:hint="@string/enter_your_first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.95" />

            <EditText
                android:id="@+id/edit_add_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@color/silver2"
                android:hint="@string/enter_your_second_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_add_first_name"
                app:layout_constraintWidth_percent="0.95"

                />

            <EditText
                android:id="@+id/edit_add_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="phone"
                android:background="@color/silver2"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_add_last_name"
                app:layout_constraintWidth_percent="0.95" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navy"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/update"
                android:textColor="@color/silver"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_add_number" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>